--- a/src/main/resources/properties/application.properties
+++ b/src/main/resources/properties/application.properties
@@ -25,7 +25,9 @@ shiro.uid.rememeberMe.cookie.name=rememberMe
 #默认 rememberMe #{7 * 24 * 60 * 60} 7天
 shiro.uid.rememeberMe.cookie.maxAge=604800
 
-
+#CXF ws-security认证
+cxf.username=webservice
+cxf.password=123456
 
 #用户删除后
 shiro.user.notfound.url=/login?notfound=1
